<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="38dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        tools:ignore="LabelFor"
        android:hint="@string/email"/>
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="116dp"
        android:autofillHints=""
        tools:ignore="LabelFor"
        android:hint="@string/password"/>
    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/login" />
    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginTop="8dp"
        android:text=""
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
